# stream-cipher-testing

./: CMakeLists.txt  bytes.c  bytes.h  main.c  matrix.c  matrix.h  scipher.cbp  scipher.depend  scipher.layout  stats.c  stats.h  stream_cipher.c  stream_cipher.h  tests_algebraic.c  tests_algebraic.h  tests_correlation.c  tests_correlation.h  tests_randommapping.c  tests_randommapping.h
grain128/: ecrypt-portable.h  grain128.c  testvectors.c
hc128/: hc128_opt32.c  hc128_opt32.h
mickey/: MICKEY2 test vectors.txt  ecrypt-sync.h  mickey2.c  test_kg.c
mt/: mt19937.c  mt19937.h
salsa20/: salsa20.c
